tests/derive/fail/missing_extract_attr.rs
use kumo_derive::Extract;

#[derive(Extract)]
struct Bad {
    title: String, // missing #[extract(css = "...")]
}

fn main() {}
